# rabbit-chatroom

./: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json
.VSCodeCounter/2023-09-13_03-00-47/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-09-14_06-46-56/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-09-15_15-57-43/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-09-17_20-23-23/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
server/: Cargo.toml  config.toml
server/src/: avatar.rs  common.rs  config.rs  controller.rs  db_handler.rs  entity.rs  lib.rs  main.rs  server.rs  service.rs  services.rs  types.rs  user.rs  user_action.rs  user_handler.rs  user_type.rs  utils.rs  verifycode.rs
server/src/common/: config.rs
server/src/controller/: auth.rs  image.rs  static.rs  user.rs  utils.rs
server/src/controller/user/: auth.rs  handlers.rs
server/src/entities/: user.rs  verifycode.rs
server/src/entities/user/: sql_model.rs  types.rs
server/src/entity/: image.rs  types.rs  user.rs
server/src/entity/user/: avatar.rs  sql_model.rs  types.rs
server/src/service/: avatar.rs  user.rs  verifycode.rs
server/src/services/: auth.rs  jwt.rs  user.rs  utils.rs
server/src/user/: types.rs
server/src/utils/: config.rs  redis.rs  sql.rs
src/main/: index.js  login.js
src/main/utils/: http.js  store.js
src/renderer/: index.html
src/renderer/src/: App.vue  main.js
src/renderer/src/components/appFrame/: index.vue
src/renderer/src/router/: index.js
src/renderer/src/utils/: sockets.js
src/renderer/src/views/home/: index.vue
src/renderer/src/views/login/: index.vue
