[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive_builder = "0.12.0"
lazy_static = "1.4.0"
salvo = "0.54.3"
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.7"
sqlx = { version = "0.7.1", features = ["sqlite"] }
tokio = { version = "1.32.0", features = ["macros"] }
toml = "0.7.8"
