[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async_once = "0.2.6"
bb8 = "0.8.1"
bb8-redis = "0.13.1"
captcha = "0.0.9"
derive_builder = "0.12.0"
image = "0.24.7"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.20"
redis = "0.23.3"
salvo = { version = "0.54.3", features = ["jwt-auth", "anyhow", "serve-static"] }
serde = { version = "1.0.188", features = ["derive"] }
sha256 = "1.4.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "fs"] }
toml = "0.7.8"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4"] }
